fixed edit-sprint spacing

--- a/src/stylesheets/team/layout.scss
+++ b/src/stylesheets/team/layout.scss
@@ -44,10 +44,9 @@
 
 .edit-sprint {
     display: block;
-    margin: 0 auto;
     width: 25rem;
     border-left: 1px solid $white;
-    padding: 2rem;
+    padding: 0.5rem 1rem;
     margin-top: 1rem;
 
     .input-section-field {
